Saving changes & additions to config files.

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,6 @@
 # TERM variable
-TERM: xterm-256color
+# TERM: xterm-256color
+TERM: alacritty
 
 window:
   padding:
@@ -18,16 +19,14 @@ font:
     family: CaskaydiaCove Nerd Font
 
   style: Regular
-  size: 9.0
+  size: 12.0
 
 bell:
   # Visual Bell Animation
-
   animation: EaseOutExpo
   duration: 100
 
   color: "#ffffff"
-
 
 background_opacity: 0.92
 
@@ -57,5 +56,32 @@ working_directory: None
 
 mouse:
   # Click settings
-    double_click: { threshold: 300 }
-    triple_click: { threshold: 300 }
+  double_click: { threshold: 300 }
+  triple_click: { threshold: 300 }
+colors:
+  # Default colors
+  primary:
+    background: '#282a36'
+    foreground: '#f8f8f2'
+
+  # Normal colors
+  normal:
+    black: '#000000'
+    red: '#ff5555'
+    green: '#50fa7b'
+    yellow: '#f1fa8c'
+    blue: '#caa9fa'
+    magenta: '#ff79c6'
+    cyan: '#8be9fd'
+    white: '#bfbfbf'
+
+  # Bright colors
+  bright:
+    black: '#575b70'
+    red: '#ff6e67'
+    green: '#5af78e'
+    yellow: '#f4f99d'
+    blue: '#caa9fa'
+    magenta: '#ff92d0'
+    cyan: '#9aedfe'
+    white: '#e6e6e6'
