--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,4 +1,9 @@
-# Comfig additions Inspired by Rafael Cavalcanti - rafaelc.org
+# Default Subtitle language
+slang="eng"
+
+keep-open=always
+
+# Config additions Inspired by Rafael Cavalcanti - rafaelc.org
 
 # By default screenshots are named with the first available number in the directory.
 # This makes a pain to later move them to a directory with more screenshots.
@@ -6,7 +11,6 @@ screenshot-template="~/Pictures/Screenshots/%F/%P"
 
 save-position-on-quit=yes
 
-keep-open=always
 
 # Show filename when playback starts
 osd-playing-msg="${media-title}"
@@ -14,3 +18,4 @@ osd-playing-msg="${media-title}"
 
 # Set geometry so mpv doesn't resize window for each video
 geometry=800x600
+
