--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -27,6 +27,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Moving between panes without using prefix key
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 # easier and faster switching between next/prev window if prefix is C-a
 bind C-p previous-window
 bind C-n next-window
