Added new aliases for tmux and ls
Made some additions to init.vim and changed some of the shortcuts to silent ones

Added ability in tmux to resize panes

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,7 +1,8 @@
 # Default Subtitle language
 slang="eng"
 
-keep-open=always
+keep-open=yes
+# keep-open-pause=no
 
 # Config additions Inspired by Rafael Cavalcanti - rafaelc.org
 
