--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,6 +33,16 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Resize panes
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
+bind -n C-Left resize-pane -L 10
+bind -n C-Right resize-pane -R 10
+bind -n C-Down resize-pane -D 5
+bind -n C-Up resize-pane -U 5
+
 # easier and faster switching between next/prev window if prefix is C-a
 bind C-p previous-window
 bind C-n next-window
