Updated bashrc's with new aliases
Added an option in mpv.conf to automatically download subtitles for YT vids

Added new mounts script and, minor changes to the obs and monitor scripts

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,5 +1,10 @@
+# Subtitles
 # Default Subtitle language
 slang="eng"
+
+sub-auto=fuzzy
+fs
+ytdl-raw-options=ignore-config=,sub-lang=en,write-auto-sub=
 
 keep-open=yes
 # keep-open-pause=no
@@ -19,4 +24,3 @@ osd-playing-msg="${media-title}"
 
 # Set geometry so mpv doesn't resize window for each video
 geometry=800x600
-
