--- a/.config/mpv/script-opts/autoload.conf
+++ b/.config/mpv/script-opts/autoload.conf
@@ -1,7 +1,8 @@
-# To configure this script use file autoload.conf in directory script-opts (the "script-opts"
-# directory must be in the mpv configuration directory, typically ~/.config/mpv/).
+# To configure this script use file autoload.conf in directory script-opts (the
+# "script-opts"
+# directory must be in the mpv configuration directory, typically ~/.config/mpv/
+# ).
 # Example configuration would be:
-
 disabled=no
 images=no
 videos=yes
