Updated configs and changed wait time in some scripts

--- a/.config/mpv/script-opts/autoload.conf
+++ b/.config/mpv/script-opts/autoload.conf
@@ -3,7 +3,7 @@
 # directory must be in the mpv configuration directory, typically ~/.config/mpv/
 # ).
 # Example configuration would be:
-disabled=no
+disabled=yes
 images=no
 videos=yes
 audio=yes
