Updated configs and scripts

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -3,3 +3,9 @@ ctrl+m cycle_values video-rotate 90 180 270 0
 
 # Allows you to rotate playing video in an anti-clockwise direction in step sizes of 90deg each time.
 shift+ctrl+m cycle_values video-rotate 270 180 90 0
+
+-   add video-zoom -.25
++   add video-zoom .25
+
+# )   set video-pan-x0; set video-pan-y 0; set video-zoom 0
+# shift+ctrl+-  set video-zoom 0
