Added new rclone aliases. Updated nvim config
Changed tmux prefix bind

Added Jupyter notebook stuff to .profile

Added new alias to adshortcuts and updated resolution changing scripts

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,11 @@
 # SETS
 set -g default-terminal "screen-256color"
 
+# Changing bind key from C-b to C-a
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
 # Mouse works as expected
 set -g mouse on
 
@@ -19,7 +24,11 @@ unbind '"'
 bind | split-window -h
 
 # shortcut to source tmux config without restarting.
-bind r source-file $HOME/.config/tmux/tmux.conf
+# and send a short display message as well
+bind r source-file $HOME/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded!"
+
+# shortcut to open tmux config and change window name to Cpnfig
+bind-key M new-window -n "Config" "nvim ~/.config/tmux/tmux.conf"
 
 # Moving between panes with vim movement keys
 bind h select-pane -L
