Updated bashrc; Added vim table plugin and added terminal window title options to tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -55,3 +55,8 @@ bind -n C-Up resize-pane -U 5
 # easier and faster switching between next/prev window if prefix is C-a
 bind C-p previous-window
 bind C-n next-window
+
+# Let Tmux change terminal window title
+set -g set-titles on
+set -g set-titles-string "#W" # Tab Name
+# set -g set-titles-string "#W/#T" # Tab name along with Tmux Pane Name
