Split windows open in the current directory and windows/panes start at 1 instead of 0

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -19,9 +19,9 @@ set -s escape-time 0
 
 # Changing default keys for getting horizontal and vertical split panes.
 unbind %
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
-bind | split-window -h
+bind | split-window -v -c "#{pane_current_path}"
 
 # shortcut to source tmux config without restarting.
 # and send a short display message as well
@@ -60,3 +60,9 @@ bind C-n next-window
 set -g set-titles on
 set -g set-titles-string "#W" # Tab Name
 # set -g set-titles-string "#W/#T" # Tab name along with Tmux Pane Name
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
